fixes bug 503312 by creating a separate focus and selection selector.  also made sure to set colors with background colors to avoid unreadable white on whites happening r=mkmelin a-thunderbird3=standard8

--- a/mail/themes/gnomestripe/mail/mailWindow1.css
+++ b/mail/themes/gnomestripe/mail/mailWindow1.css
@@ -342,9 +342,14 @@ treechildren::-moz-tree-image(subjectCol, imapdeleted) {
   background-color: -moz-oddtreerow;
 }
 
-#threadTree > treechildren::-moz-tree-row(selected),
-#threadTree > treechildren::-moz-tree-row(selected, focus) {
+#threadTree > treechildren::-moz-tree-row(selected) {
+  color: -moz-cellhighlighttext;
   background-color: -moz-cellhighlight;
+}
+
+#threadTree > treechildren::-moz-tree-row(selected, focus) {
+  color: HighlightText;
+  background-color: Highlight;
 }
 
 .tabmail-tab[type="message"]  .tab-icon-image {
